plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.safeg'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	testImplementation 'org.springframework.security:spring-security-test'

    // 타임리프 다이얼렉트 레이아웃
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework:spring-aspects'

    // Other dependencies (e.g., database driver)
    implementation 'com.mysql:mysql-connector-j' // MySQL 8.0.31 이후 버전에 맞는 올바른 의존성
    // or
    runtimeOnly 'com.h2database:h2' // Example for H2 database
    
    // MyBatis 설정 (이미 추가하신 내용)
    // JPA/Hibernate 기능을 함께 사용하려는 경우 (가장 권장)

    
    // // validation
    // implementation 'org.springframework.boot:spring-boot-starter-validation'


    // // SQL 상세하게 보여주기
    // implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    // // spring mail
    // implementation 'org.springframework.boot:spring-boot-starter-mail'

    // // Flyway
    // implementation 'org.flywaydb:flyway-core'
    // implementation 'org.flywaydb:flyway-mysql'

    // // Spring Security
    // implementation 'org.springframework.boot:spring-boot-starter-security'

    // // Spring Cloud Starter AWS
    // implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // // Random String Utils
    // implementation 'org.apache.commons:commons-lang3:3.12.0'

    // // Slack
    // implementation 'com.slack.api:slack-api-client:1.30.0'
    // implementation 'com.slack.api:slack-app-backend:1.30.0'
    // implementation("net.gpedro.integrations.slack:slack-webhook:1.4.0")

    // // XML 파싱
    // implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'

    // //jwt
    // implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    // runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    // runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // // Jasypt - Application.yml 암호화
    // implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'

    // // queryDSL 설정
    // implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    // annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    // annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    // annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // compileOnly 'org.projectlombok:lombok'
    // runtimeOnly 'com.mysql:mysql-connector-j'
    // annotationProcessor 'org.projectlombok:lombok'
    // testImplementation 'org.springframework.boot:spring-boot-starter-test'
}